--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,8 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
     <!-- Custom Theme files -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +17,6 @@
     </script>
     <!-- //Custom Theme files -->
     <!--web-font-->
-    <link href="//fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet" type="text/css">
     <!--//web-font-->
     <!-- js -->
     <script src="js/jquery-1.11.1.min.js"></script>
@@ -118,109 +119,159 @@
 
 
 
-    <!--projects  -->
+    <!-- Portfolio -->
+    <section id="Portfolio" class="content">
 
-    <div class="container bootstrap snippet">
-        <h1 class="text-center section-title">Our Projects</h1>
-        <hr>
-        <section id="portfolio" class="gray-bg padding-top-bottom">
-            <div class="container bootstrap snippet">
-                <!--==== Portfolio Filters ====-->
-                <div class="categories">
-                    <ul>
-                        <li class="active">
-                            <a href="#" data-filter="*">All Categories</a>
-                        </li>
-                        <li>
-                            <a href="#" data-filter=".web-design">Web Design</a>
-                        </li>
-                        <li>
-                            <a href="#" data-filter=".apps">Apps</a>
-                        </li>
-                        <li>
-                            <a href="#" data-filter=".psd">PSD</a>
-                        </li>
-                    </ul>
-                </div>
+        <!-- Container -->
+        <div class="container portfolio_title">
 
-                <!-- ======= Portfolio items ===-->
-                <div class="projects-container scrollimation in">
-                    <div class="row">
-                        <article class="col-md-4 col-sm-6 portfolio-item web-design apps psd">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/nature/2" alt="">
-                                    <h2 class="project-title">Billing</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="enlarge cboxElement" href="#" title="Bills Project"><i class="fa fa-expand fa-fw"></i></a>
-                                <a class="link" href="#"><i class="fa fa-eye fa-fw"></i></a>
-                            </div>
-                        </article>
+            <!-- Title -->
+            <div class="section-title">
+                <h2>Portfolio</h2>
+            </div>
+            <!--/Title -->
 
-                        <article class="col-md-4 col-sm-6 portfolio-item apps">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/fashion/4" alt="">
-                                    <h2 class="project-title">Augmented Tourist</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="link centered" href=""><i class="fa fa-eye fa-fw"></i></a>
-                            </div>
-                        </article>
+        </div>
+        <!-- Container -->
 
-                        <article class="col-md-4 col-sm-6 portfolio-item web-design psd">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/city/2" alt="">
-                                    <h2 class="project-title">Get Colored</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="enlarge centered cboxElement" href="#" title="Get Colored"><i class="fa fa-expand fa-fw"></i></a>
-                            </div>
-                        </article>
+        <div class="portfolio-top"></div>
 
-                        <article class="col-md-4 col-sm-6 portfolio-item apps">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/cats/4" alt="">
-                                    <h2 class="project-title">Holiday Selector</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="enlarge cboxElement" href="#" title="Holiday Selector"><i class="fa fa-expand fa-fw"></i></a>
-                                <a class="link" href="#"><i class="fa fa-eye fa-fw"></i></a>
-                            </div>
-                        </article>
+        <!-- Portfolio Filters -->
+        <div class="portfolio">
 
-                        <article class="col-md-4 col-sm-6 portfolio-item web-design psd">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/technics/3" alt="">
-                                    <h2 class="project-title">Scavenger Hunt</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="enlarge cboxElement" href="#" title="Scavenger Hunt"><i class="fa fa-expand fa-fw"></i></a>
-                                <a class="link" href="#"><i class="fa fa-eye fa-fw"></i></a>
-                            </div>
-                        </article>
+            <div id="filters" class="sixteen columns">
+                <ul class="clearfix">
+                    <li><a id="all" href="#" data-filter="*" class="active">
+                        <h5>All</h5>
+                    </a></li>
+                    <li><a class="" href="#" data-filter=".prototype">
+                        <h5>Prototype</h5>
+                    </a></li>
+                    <li><a class="" href="#" data-filter=".design">
+                        <h5>Drawing Room</h5>
+                    </a></li>
+                    <li><a class="" href="#" data-filter=".android">
+                        <h5>Wood Design</h5>
+                    </a></li>
+                    <li><a class="" href="#" data-filter=".appleIOS">
+                        <h5>Glass Design</h5>
+                    </a></li>
+                    <li><a class="" href="#" data-filter=".web">
+                        <h5>Kitchen</h5>
+                    </a></li>
+                </ul>
+            </div>
+            <!--/Portfolio Filters -->
 
-                        <article class="col-md-4 col-sm-6 portfolio-item web-design apps">
-                            <div class="portfolio-thumb in">
-                                <a href="#" class="main-link">
-                                    <img class="img-responsive img-center" src="http://lorempixel.com/400/300/nightlife/4" alt="">
-                                    <h2 class="project-title">Sonor</h2>
-                                    <span class="overlay-mask"></span>
-                                </a>
-                                <a class="enlarge cboxElement" href="#" title="Sonor"><i class="fa fa-expand fa-fw"></i></a>
-                                <a class="link" href="#"><i class="fa fa-eye fa-fw"></i></a>
-                            </div>
-                        </article>
+            <!-- Portfolio Wrapper -->
+            <div class="isotope fadeInLeft animated wow" style="position: relative; overflow: hidden; height: 480px;" id="portfolio_wrapper">
+
+                <!-- Portfolio Item -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   appleIOS isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic1.jpg"  alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic1.jpg" class="item_info fancybox">
+                            <h4 class="project_name">SMS Mobile App</h4>
+                        </a>
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
+                <!--/Portfolio Item -->
 
+                <!-- Portfolio Item-->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic2.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic2.jpg" class="item_info fancybox">
+                            <h4 class="project_name">Finance App</h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item -->
+
+                <!-- Portfolio Item -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design  isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic3.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic3.jpg" class="item_info fancybox">
+                            <h4 class="project_name">GPS Concept</h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item-->
+
+                <!-- Portfolio Item-->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 0px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  android  prototype web isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic4.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic4.jpg" class="item_info fancybox">
+                            <h4 class="project_name">Shopping</h4>
+                        </a>
+                    </div>
+                </div>
+                <!-- Portfolio Item -->
+
+                <!-- Portfolio Item -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic5.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic5.jpg" class="item_info fancybox">
+                            <h4 class="project_name">Managment</h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item -->
+
+                <!-- Portfolio Item -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(337px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  web isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic6.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic6.jpg" class="item_info fancybox">
+                            <h4 class="project_name">iPhone
+                            </h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item -->
+
+                <!-- Portfolio Item  -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(674px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four  design web isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic7.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic7.jpg" class="item_info fancybox">
+                            <h4 class="project_name">Nexus Phone</h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item -->
+
+                <!-- Portfolio Item -->
+                <div style="position: absolute; left: 0px; top: 0px; transform: translate3d(1011px, 240px, 0px) scale3d(1, 1, 1); width: 337px; opacity: 1;" class="portfolio-item one-four   android isotope-item">
+                    <div class="portfolio_img"> <img src="img/projects/portfolio_pic8.jpg" alt="Portfolio 1"> </div>
+                    <div class="item_overlay">
+                        <a href="img/projects/portfolio_pic8.jpg" class="item_info fancybox">
+                            <h4 class="project_name">Android</h4>
+                        </a>
+                    </div>
+                </div>
+                <!--/Portfolio Item -->
+
+            </div>
+            <!--/Portfolio Wrapper -->
+
+        </div>
+        <!--/Portfolio Filters -->
+
+        <div class="portfolio_btm"></div>
+
+
+        <div id="project_container">
+            <div class="clear"></div>
+            <div id="project_data"></div>
+        </div>
+
+
+    </section>
+    <!--/Portfolio -->
 
 
 
@@ -301,6 +352,13 @@
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
+    <script type="text/javascript" src="js/jquery.nav.js"></script>
+    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="js/jquery.isotope.js"></script>
+    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/wow.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 
 
 </div></body></html>
