solved about from other pages

--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="hvr-bounce-to-bottom bg-body">
-                            <a href="about.html">About</a>
+                            <a href="index.html#about">About</a>
                         </li><li class="hvr-bounce-to-bottom bg-body active">
                         <a href="projects.html">Projects</a>
                     </li>
