--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             		});
         </script>
         <!--//end-smoth-scrolling-->
+                <script src="js/paragraph.js"></script>
+
     </head><body>
         <!--banner-->
         <div class="banner">
@@ -136,8 +138,8 @@
                 <!-- container -->
                 <div class="container">
                     <div class="welcome-info">
-                        <h3 class="welcome-title">THE BEGINNING OF A LONG &amp; STILL ON_GOING STORY</h3>
-                        <p class="paragraph">Celebratory was founded in 2008, It was first composed by two ambitious
+                        <h3 class="welcome-title">THE BEGINNING OF A LONG &amp; STILL ON-GOING STORY</h3>
+                        <p class="paragraph" id="welcome">Celebratory was founded in 2008, It was first composed by two ambitious
                             and eager young gentlemen specialized in organizing and planning social
                             events, they have acquired experience throughout the years and they have
                             gathered a highly skilled team to have the capability to organize any kind
@@ -157,8 +159,8 @@
             <div class="slid">
                 <div class="container">
                     <div class="slid-info">
-                        <h3>PLANNING &amp; PRODUCTION</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <h3 class="pp-title">PLANNING &amp; PRODUCTION</h3>
+                        <p class="paragraph" id="pp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -174,13 +176,13 @@
                 <div class="container">
                     <div class="col-md-6">
                         <h3>CELEBRATORY QUALITY</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="paragraph" id="cq">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
                     </div>
                     <div class="col-md-6">
                         <h3>CELEBRATORY EXPERIENCE</h3>
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="paragraph" id="ce">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip e</p>
                     </div>
