Hiring Page Handled

--- a/hiring.html
+++ b/hiring.html
@@ -130,10 +130,10 @@
     <!--//banner-->
 <div class="hiring">
     <div class="container-fluid" >
-        <div class="hiring-info">
-        <h4>Graphic Designer</h4>
-        <h4>Social Media Specialist</h4>
-        <h4>Wedding Planner</h4>
+        <div class="hiring-info row">
+        <h3 class="col-md-4">GRAPHIC DESIGNER</h3>
+        <h3 class="col-md-4">SOCIAL MEDIA SPECIALIST</h3>
+        <h3 class="col-md-4">WEDDING PLANNER</h3>
         </div>
     </div>
 
