--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <html><head>
-    <title>Celebratory | Team :: House of Celebration</title>
+    <title>Celebratory | Services :: House of Celebration</title>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
@@ -124,11 +124,19 @@
         SCHOOL PROMS
     </div><!--End Service Page Title -->
     <!-- Service Page Subtitle-->
-    <div class="service-page-subtitle">
-                <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+    <div class="service-page-subtitle container">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.
+                </p>
     </div><!--End Service Page Subtitle-->
     <!-- Service TOMORROWLAND -->
-    <div class="service-tomorrowland col-md-12">
+    <div class="service-tomorrowland ">
         <!--Start Container -->
         <div class="container">
         <div class="service-caption"> TOMORROWlAND</div>
@@ -136,26 +144,26 @@
     </div><!-- End Service TOMORROWLAND -->
         </div><!--END Container
             <!-- Service GADSBY -->
-            <div class="service-gadsby col-md-6">
+            <div class="service-gadsby ">
                 <div class="service-caption">THE GREAT GADSBY</div>
     </div><!-- END Service GADSBY -->
             <!-- Service CARIBIANS -->
-            <div class="service-caribians col-md-6">
+            <div class="service-caribians ">
                 <div class="service-caption"> PIRATES OF THE CARIBIANS</div>
             </div><!-- END Service CARIBIANS -->
 
 
             <!-- Service INDIAN -->
-            <div class="service-indian col-md-12">
+            <div class="service-indian ">
                 <div class="service-caption">INDIAN</div>
             </div><!-- END Service INDIAN -->
 
             <!-- Service GADSBY2 -->
-            <div class="service-gadsby2 col-md-6">
+            <div class="service-gadsby2 ">
                 <div class="service-caption">THE GREAT GADSBY</div>
             </div><!-- END Service GADSBY2 -->
             <!-- Service CARIBIANS2 -->
-            <div class="service-caribians2 col-md-6">
+            <div class="service-caribians2 ">
                 <div class="service-caption">PIRATES OF THE CARIBIANS</div>
             </div><!-- END Service CARIBIANS2 -->
 
